# ORI

./: .gitignore  CMakeLists.txt  cli-terface.cpp
Interface/: table.py
NP1/: files.h
NP3/: variable_registry.h
Project/: CMakeLists.txt  CMakePresets.json  README.md  build_run.sh  cli-terface.cpp  imgui.ini  main.cpp  unit_test
Project/FolderTables/: Test.tab
Project/Interface/: cli-terface.cpp  table.py  test3.py
Project/ScratchQL/: CMakeLists.txt  README.md  interface.cpp  test.cpp
Project/ScratchQL/FolderTables/: test_table_handler.tab_data  test_table_handler.tab_header
Project/ScratchQL/archived/include/: SQLTable.h
Project/ScratchQL/archived/src/: SQLTable.cpp
Project/ScratchQL/include/: DataInterface.h  Date.h  DateHandler.h  ErrorHandler.h  FileHandler.h  FloatHandler.h  HeaderHandler.h  HeaderHandler.x  IntHandler.h  MetaData.h  SQLTable.h  SimpleTableHandler.h  StringHandler.h  TableHandler.h
Project/ScratchQL/src/: DataInterface.cpp  Date.cpp  DateHandler.cpp  FileHandler.cpp  FloatHandler.cpp  HeaderHandler.cpp  IntHandler.cpp  MetaData.cpp  SQLTable.cpp  StringHandler.cpp
Project/ScratchQL/unit_tests/: DataInterface_test.h  HeaderHandler_test.h  SimpleHandler_test.h  test_dataInterface.cpp  unit_test.cpp
ScratchQL/: CMakeLists.txt  test.cpp
ScratchQL/include/: DataInterface.h  FileHandler.h  SimpleTableHandler.h
ScratchQL/src/: FileHandler.cpp  StringHandler.cpp
ScratchQL/unit_tests/: test_table.tab  unit_test.cpp
conteudo_teoria/: M1.ipynb
conteudo_teoria/NP1/: leitura_arq.c  main  test.txt
